<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.resourceDetail.ResourceDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/resourceImageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#ffffff" />


        <TextView
            android:id="@+id/titleTextView"
            style="@style/AppTheme.Detail.TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_v_spacing_large"
            tools:text="Resouce Title" />

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/AppTheme.DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_v_spacing_large"
            tools:text="loren auushuash" />


        <TextView
            style="@style/AppTheme.Detail.Group.TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_v_spacing_large"
            android:text="@string/contact_information" />

        <LinearLayout
            android:id="@+id/contactInformationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

        </LinearLayout>

        <TextView
            style="@style/AppTheme.Detail.Group.TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_v_spacing_large"
            android:text="@string/address" />

        <LinearLayout
            android:id="@+id/addressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

        </LinearLayout>

        <TextView
            android:id="@+id/notesTitleTextView"
            style="@style/AppTheme.Detail.Group.TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_v_spacing_large"
            android:text="@string/notes" />

        <LinearLayout
            android:id="@+id/notesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notesTextView"
                style="@style/AppTheme.DefaultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/socialMediaTextView"
            style="@style/AppTheme.Detail.Group.TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_v_spacing_large"
            android:text="@string/social_media" />

        <LinearLayout
            android:id="@+id/socialMediaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/facebookImageView"
                android:layout_width="@dimen/icon_social_media_size"
                android:layout_height="@dimen/icon_social_media_size"
                android:padding="@dimen/default_icon_padding_inner"
                app:srcCompat="@drawable/ic_facebook_circle" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/twitterImageView"
                android:layout_width="@dimen/icon_social_media_size"
                android:layout_height="@dimen/icon_social_media_size"
                android:padding="@dimen/default_icon_padding_inner"
                app:srcCompat="@drawable/ic_twitter_circle" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/youtubeImageView"
                android:layout_width="@dimen/icon_social_media_size"
                android:layout_height="@dimen/icon_social_media_size"
                android:padding="@dimen/default_icon_padding_inner"
                app:srcCompat="@drawable/ic_youtube_circle" />

        </LinearLayout>

        <TextView
            style="@style/AppTheme.Detail.Group.TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_v_spacing_large"
            android:text="@string/business_hours" />

        <LinearLayout
            android:id="@+id/businessHoursLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <com.quickseries.mobiletest.components.BusinessHoursRowView
                android:id="@+id/sundayBusinessHoursRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bhr_day="@string/sunday"
                app:bhr_detail="10am - 22-pm" />

            <com.quickseries.mobiletest.components.BusinessHoursRowView
                android:id="@+id/mondayBusinessHoursRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bhr_day="@string/monday"
                app:bhr_detail="10am - 22-pm" />

            <com.quickseries.mobiletest.components.BusinessHoursRowView
                android:id="@+id/tuesdayBusinessHoursRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bhr_day="@string/tuesday"
                app:bhr_detail="10am - 22-pm" />

            <com.quickseries.mobiletest.components.BusinessHoursRowView
                android:id="@+id/wednesdayBusinessHoursRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bhr_day="@string/wednesday"
                app:bhr_detail="10am - 22-pm" />

            <com.quickseries.mobiletest.components.BusinessHoursRowView
                android:id="@+id/thursdayBusinessHoursRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bhr_day="@string/thursday"
                app:bhr_detail="10am - 22-pm" />

            <com.quickseries.mobiletest.components.BusinessHoursRowView
                android:id="@+id/fridayBusinessHoursRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bhr_day="@string/friday"
                app:bhr_detail="10am - 22-pm" />

            <com.quickseries.mobiletest.components.BusinessHoursRowView
                android:id="@+id/saturdayBusinessHoursRowView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bhr_day="@string/saturday"
                app:bhr_detail="10am - 22-pm" />


        </LinearLayout>
    </LinearLayout>


</ScrollView>