<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_restaurant_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="start"/>

        <TextView
            android:id="@+id/activity_restaurant_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/contact_information"
            android:gravity="start"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_restaurant_detail_contact_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/white"
            android:layout_margin="15dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/address"
            android:textAllCaps="true"
            android:gravity="start"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_restaurant_detail_address_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/white"
            android:layout_margin="15dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/social_media"
            android:textAllCaps="true"
            android:gravity="start"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_restaurant_detail_media_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/white"
            android:layout_margin="15dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/business_hours"
            android:gravity="start"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_restaurant_detail_days_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/white"
            android:layout_margin="15dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>



</ScrollView>